--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -10,3 +10,5 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/build-push-action@v2
