--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -12,3 +12,5 @@ jobs:
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/build-push-action@v2
+        with:
+          push: true
